logs/dag_id=tune_stream_dag/run_id=scheduled__2023-01-02T100000+0000/task_id=Load_songplays_fact_table/attempt=1.log
[2025-07-24T13:53:35.148+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-02T10:00:00+00:00 [queued]>
[2025-07-24T13:53:35.169+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-02T10:00:00+00:00 [queued]>
[2025-07-24T13:53:35.171+0000] {taskinstance.py:2170} INFO - Starting attempt 1 of 4
[2025-07-24T13:53:35.197+0000] {taskinstance.py:2191} INFO - Executing <Task(PythonOperator): Load_songplays_fact_table> on 2023-01-02 10:00:00+00:00
[2025-07-24T13:53:35.212+0000] {standard_task_runner.py:60} INFO - Started process 537 to run task
[2025-07-24T13:53:35.222+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'tune_stream_dag', 'Load_songplays_fact_table', 'scheduled__2023-01-02T10:00:00+00:00', '--job-id', '389', '--raw', '--subdir', 'DAGS_FOLDER/etl_pipeline.py', '--cfg-path', '/tmp/tmp18vac4vj']
[2025-07-24T13:53:35.230+0000] {standard_task_runner.py:88} INFO - Job 389: Subtask Load_songplays_fact_table
[2025-07-24T13:53:35.371+0000] {task_command.py:423} INFO - Running <TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-02T10:00:00+00:00 [running]> on host a4bcda7cb679
[2025-07-24T13:53:35.570+0000] {taskinstance.py:2480} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='genz-legend' AIRFLOW_CTX_DAG_ID='tune_stream_dag' AIRFLOW_CTX_TASK_ID='Load_songplays_fact_table' AIRFLOW_CTX_EXECUTION_DATE='2023-01-02T10:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2023-01-02T10:00:00+00:00'
[2025-07-24T13:53:35.594+0000] {taskinstance.py:2698} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 199, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 216, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/etl_pipeline.py", line 168, in <lambda>
    python_callable=lambda: load_table(SqlQueries.songplay_table_insert),
  File "/opt/airflow/dags/etl_pipeline.py", line 127, in load_table
    cur.execute(f"DELETE FROM {query.split()[3]}")
psycopg2.errors.SyntaxError: syntax error at or near ")"
LINE 1: DELETE FROM events.start_time)
                                     ^

[2025-07-24T13:53:35.637+0000] {taskinstance.py:1138} INFO - Marking task as UP_FOR_RETRY. dag_id=tune_stream_dag, task_id=Load_songplays_fact_table, execution_date=20230102T100000, start_date=20250724T135335, end_date=20250724T135335
[2025-07-24T13:53:35.674+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 389 for task Load_songplays_fact_table (syntax error at or near ")"
LINE 1: DELETE FROM events.start_time)
                                     ^
; 537)
[2025-07-24T13:53:35.727+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2025-07-24T13:53:35.912+0000] {taskinstance.py:3280} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2025-07-24T16:05:27.351+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-02T10:00:00+00:00 [queued]>
[2025-07-24T16:05:27.371+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-02T10:00:00+00:00 [queued]>
[2025-07-24T16:05:27.372+0000] {taskinstance.py:2170} INFO - Starting attempt 1 of 4
[2025-07-24T16:05:27.399+0000] {taskinstance.py:2191} INFO - Executing <Task(PythonOperator): Load_songplays_fact_table> on 2023-01-02 10:00:00+00:00
[2025-07-24T16:05:27.411+0000] {standard_task_runner.py:60} INFO - Started process 1787 to run task
[2025-07-24T16:05:27.419+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'tune_stream_dag', 'Load_songplays_fact_table', 'scheduled__2023-01-02T10:00:00+00:00', '--job-id', '1344', '--raw', '--subdir', 'DAGS_FOLDER/etl_pipeline.py', '--cfg-path', '/tmp/tmp8cmsqwvg']
[2025-07-24T16:05:27.425+0000] {standard_task_runner.py:88} INFO - Job 1344: Subtask Load_songplays_fact_table
[2025-07-24T16:05:27.588+0000] {task_command.py:423} INFO - Running <TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-02T10:00:00+00:00 [running]> on host c53547d84df1
[2025-07-24T16:05:27.773+0000] {taskinstance.py:2480} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='genz-legend' AIRFLOW_CTX_DAG_ID='tune_stream_dag' AIRFLOW_CTX_TASK_ID='Load_songplays_fact_table' AIRFLOW_CTX_EXECUTION_DATE='2023-01-02T10:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2023-01-02T10:00:00+00:00'
[2025-07-24T16:05:27.888+0000] {python.py:201} INFO - Done. Returned value was: None
[2025-07-24T16:05:27.918+0000] {taskinstance.py:1138} INFO - Marking task as SUCCESS. dag_id=tune_stream_dag, task_id=Load_songplays_fact_table, execution_date=20230102T100000, start_date=20250724T160527, end_date=20250724T160527
[2025-07-24T16:05:27.965+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 0
[2025-07-24T16:05:28.167+0000] {taskinstance.py:3280} INFO - 4 downstream tasks scheduled from follow-on schedule check
[2025-07-24T17:18:07.829+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-02T10:00:00+00:00 [queued]>
[2025-07-24T17:18:07.850+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-02T10:00:00+00:00 [queued]>
[2025-07-24T17:18:07.851+0000] {taskinstance.py:2170} INFO - Starting attempt 1 of 4
[2025-07-24T17:18:07.862+0000] {taskinstance.py:2191} INFO - Executing <Task(PythonOperator): Load_songplays_fact_table> on 2023-01-02 10:00:00+00:00
[2025-07-24T17:18:07.869+0000] {standard_task_runner.py:60} INFO - Started process 1542 to run task
[2025-07-24T17:18:07.872+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'tune_stream_dag', 'Load_songplays_fact_table', 'scheduled__2023-01-02T10:00:00+00:00', '--job-id', '2101', '--raw', '--subdir', 'DAGS_FOLDER/etl_pipeline.py', '--cfg-path', '/tmp/tmpr_1mcz2l']
[2025-07-24T17:18:07.874+0000] {standard_task_runner.py:88} INFO - Job 2101: Subtask Load_songplays_fact_table
[2025-07-24T17:18:07.939+0000] {task_command.py:423} INFO - Running <TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-02T10:00:00+00:00 [running]> on host 5def55d2a1b5
[2025-07-24T17:18:08.032+0000] {taskinstance.py:2480} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='genz-legend' AIRFLOW_CTX_DAG_ID='tune_stream_dag' AIRFLOW_CTX_TASK_ID='Load_songplays_fact_table' AIRFLOW_CTX_EXECUTION_DATE='2023-01-02T10:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2023-01-02T10:00:00+00:00'
[2025-07-24T17:18:08.311+0000] {python.py:201} INFO - Done. Returned value was: None
[2025-07-24T17:18:08.320+0000] {taskinstance.py:1138} INFO - Marking task as SUCCESS. dag_id=tune_stream_dag, task_id=Load_songplays_fact_table, execution_date=20230102T100000, start_date=20250724T171807, end_date=20250724T171808
[2025-07-24T17:18:08.366+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 0
[2025-07-24T17:18:08.394+0000] {taskinstance.py:3280} INFO - 4 downstream tasks scheduled from follow-on schedule check
